--- a/project/bookkeeping/templates/bookkeeping/includes/pensions_worth_form.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/pensions_worth_form.html
@@ -1,4 +1,4 @@
 {% load formset %}
 {% load i18n %}
 
-{% generic_formset title=_('Worth of pensions') update_container='pension_worth' %}
+{% generic_formset title=_('Worth of pensions') update_container='pensions_worth' %}
