no need reload savings and pensions

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -135,9 +135,7 @@
             success: function (data) {
                 var blocks = [
                     'no_incomes',
-                    'wealth',
-                    'savings_worth',
-                    'pensions_worth',
+                    'wealth'
                 ];
                 reload_stats(data, blocks);
             }
