--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -49,7 +49,7 @@
 
 <!-- accounts stats -->
 <div class="row gx-2">
-    <div id="accounts_worth" class="col-lg-7">{{ accounts }}</div>
+    <div id="accounts_worth" class="col-lg-7">{% include 'bookkeeping/includes/accounts_worth_list.html' %}</div>
     <div class="col-lg-3">
         <div class="row">
             <div class="col-lg-12 col-md-6">
