--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -89,12 +89,12 @@
 
 <!-- savings -->
 <div class="row mt-3">
-    <div id="savings_worth" class="col-lg-12">{{ savings }}</div>
+    <div id="savings_worth" class="col-lg-12">{% funds_table savings %}</div>
 </div>
 
 <!-- pensions -->
 <div class="row mt-3">
-    <div id="pensions_worth" class="col-lg-12">{{ pensions }}</div>
+    <div id="pensions_worth" class="col-lg-12">{% funds_table pensions %}</div>
 </div>
 
 <script>
