--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -56,7 +56,7 @@
                 <div>{% info_table year_balance_short %}</div>
             </div>
             <div class="col-lg-12 col-md-6">
-                <div id="no_incomes">{{ no_incomes }}</div>
+                <div id="no_incomes">{{ no_incomes|safe }}</div>
             </div>
         </div>
     </div>
