accountworthreset javascrip udate

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -113,9 +113,11 @@
                     'ajax_trigger': '1'
                 },
                 success: function (data) {
-                    if (data) {
-                        var accounts = $(data).filter('#accounts_worth');
-                        $('#accounts_worth').html(accounts);
+                    if(data) {
+                        var blocks = [
+                            'accounts_worth'
+                        ];
+                        reload_stats(data, blocks);
                     }
                 }
             });
