fixed errors, after debts html containers rename

--- a/project/debts/templates/debts/includes/borrows_return_delete_form.html
+++ b/project/debts/templates/debts/includes/borrows_return_delete_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_delete_form title=_('Delete') update_container='borrow_return_ajax' %}
+{% generic_delete_form title=_('Delete') update_container='borrow_return' %}
