--- a/project/debts/templates/debts/includes/lents_form.html
+++ b/project/debts/templates/debts/includes/lents_form.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% generic_form title=_('Lent') update_container='lent_ajax' %}
+{% generic_form title=_('Lent') update_container='lent' %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
