--- a/project/debts/templates/debts/includes/lents_return_form.html
+++ b/project/debts/templates/debts/includes/lents_return_form.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% generic_form title=_('Debt repayment') update_container='lent_return_ajax' %}
+{% generic_form title=_('Debt repayment') update_container='lent_return' %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
