--- a/project/debts/templates/debts/includes/borrows_form.html
+++ b/project/debts/templates/debts/includes/borrows_form.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% generic_form title=_('Borrow') update_container='borrow_ajax' %}
+{% generic_form title=_('Borrow') update_container='borrow' %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
