--- a/project/debts/templates/debts/includes/lents_return_list.html
+++ b/project/debts/templates/debts/includes/lents_return_list.html
@@ -7,6 +7,7 @@
     <thead class="thead-light">
         <tr class="top">
             <th>{% translate 'Date' %}</th>
+            <th>{% translate 'Who' %}</th>
             <th>{% translate 'Sum' %}</th>
             <th>{% translate 'Account' %}</th>
             <th>{% translate 'Remark' %}</th>
@@ -19,6 +20,7 @@
         {% url 'debts:lents_return_delete' item.id as url_delete %}
         <tr data-url="" class="dblclick">
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-start">{{ item.lent.name }}</td>
             <td class="text-start">{{ item.price|intcomma }}</td>
             <td class="text-start">{{ item.account }}</td>
             <td class="text-start">{{ item.remark }}</td>
