--- a/project/debts/templates/debts/includes/borrows_return_list.html
+++ b/project/debts/templates/debts/includes/borrows_return_list.html
@@ -6,9 +6,9 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th>{% translate 'Date' %}</th>
-            <th>{% translate 'Who' %}</th>
-            <th>{% translate 'Sum' %}</th>
+            <th class="w5">{% translate 'Date' %}</th>
+            <th class="w8">{% translate 'Borrower' %}</th>
+            <th class="w10">{% translate 'Sum' %}</th>
             <th>{% translate 'Account' %}</th>
             <th>{% translate 'Remark' %}</th>
             <th colspan="2"></th>
@@ -18,7 +18,7 @@
         {% for item in items %}
         {% url 'debts:borrows_return_update' item.id as url_update %}
         {% url 'debts:borrows_return_delete' item.id as url_delete %}
-        <tr data-url="" class="dblclick">
+        <tr data-url="" class="dblclick" {% ifchanged item.borrow.name %}{% if not forloop.first %}style="border-top: 5px #c0c0c0 solid;"{% endif %}{% endifchanged %}>
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-start">{{ item.borrow.name }}</td>
             <td class="text-start">{{ item.price|intcomma }}</td>
