--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -277,6 +277,10 @@ tr.top-text, tr.top-text th {
     width: 8rem!important;
 }
 
+.w10 {
+    width: 10rem!important;
+}
+
 .w16 {
     width: 16rem!important;
 }
