--- a/project/debts/templates/debts/includes/lents_list.html
+++ b/project/debts/templates/debts/includes/lents_list.html
@@ -6,10 +6,10 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th>{% translate 'Date' %}</th>
-            <th>{% translate 'Lender' %}</th>
-            <th>{% translate 'Sum' %}</th>
-            <th>{% translate 'Returned' %}</th>
+            <th class="w5">{% translate 'Date' %}</th>
+            <th class="w8">{% translate 'Lender' %}</th>
+            <th class="w5">{% translate 'Sum' %}</th>
+            <th class="w5">{% translate 'Returned' %}</th>
             <th>{% translate 'Account' %}</th>
             <th>{% translate 'Remark' %}</th>
             <th class="text-center">{% translate 'Closed' %}</th>
