show returned symbol in main debt is closed

--- a/project/debts/templates/debts/includes/borrows_list.html
+++ b/project/debts/templates/debts/includes/borrows_list.html
@@ -9,9 +9,9 @@
             <th class="w8">{% translate 'Borrower' %}</th>
             <th class="w5">{% translate 'Sum' %}</th>
             <th class="w5">{% translate 'Returned' %}</th>
-            <th>{% translate 'Account' %}</th>
+            <th class="w10">{% translate 'Account' %}</th>
             <th>{% translate 'Remark' %}</th>
-            <th class="text-center">{% translate 'Closed' %}</th>
+            <th class="text-center w3">{% translate 'Closed' %}</th>
             <th colspan="2"></th>
         </tr>
     </thead>
