--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -29,10 +29,6 @@
         margin-bottom: 0!important;
     }
 
-    #info-row {
-        margin-top: 2rem;
-    }
-
     .stats .empty {
         --bs-table-accent-bg: white!important;
         border: 0!important;
@@ -86,12 +82,12 @@
         {{ month_table|safe }}
     </div>
     <div class="col-lg-4">
-        <div class="row">
-            <div style="display: none;" id="chart_expenses" class="col">{{ chart_expenses|safe }}</div>
-            <div id="chart_targets" class="col">{{ chart_targets|safe }}</div>
-        </div>
-        <div class="row" id="info-row">
-            <div class="col" id="info">{{ info|safe }}</div>
+        <div class="d-flex flex-column align-items-start h-100">
+            <div class="w-100 mb-auto">
+                <div style="display: none;" id="chart_expenses">{{ chart_expenses|safe }}</div>
+                <div id="chart_targets">{{ chart_targets|safe }}</div>
+            </div>
+            <div class="w-100" id="info">{{ info|safe }}</div>
         </div>
     </div>
 </div>
