--- a/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
@@ -1,4 +1,5 @@
 {% load cell_format %}
+{% load table_cell %}
 {% load i18n %}
 
 <table class="table table-hover stats">
@@ -7,6 +8,7 @@
             <th></th>
             <th class="text-end">{% translate 'Plan' %}</th>
             <th class="text-end">{% translate 'Fact' %}</th>
+            <th class="text-end">{% translate 'Delta' %}</th>
         </tr>
     </thead>
     <tbody>
@@ -14,7 +16,8 @@
         <tr>
             <td>{{ item.title }}</td>
             <td>{{ item.plan|floatformat:2 }}</td>
-            <td class="{{ item.fact|compare:item.plan }}">{{ item.fact|floatformat:2 }}</td>
+            <td class="{% if item.title == _('Incomes') %}{{ item.fact|compare:item.plan }}{% else %}{{ item.plan|compare:item.fact }}{% endif %}">{{ item.fact|floatformat:2 }}</td>
+            <td>{{ item.delta|floatformat:2 }}</td>
         </tr>
         {% endfor %}
 
