--- a/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
@@ -16,7 +16,7 @@
         <tr>
             <td>{{ item.title }}</td>
             <td>{{ item.plan|floatformat:2 }}</td>
-            <td class="{% if item.title == _('Incomes') %}{{ item.fact|compare:item.plan }}{% else %}{{ item.plan|compare:item.fact }}{% endif %}">{{ item.fact|floatformat:2 }}</td>
+            <td class="{% if item.title == _('Incomes') or item.title == _('Balance') %}{{ item.fact|compare:item.plan }}{% else %}{{ item.plan|compare:item.fact }}{% endif %}">{{ item.fact|floatformat:2 }}</td>
             <td>{{ item.delta|floatformat:2 }}</td>
         </tr>
         {% endfor %}
