--- a/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
@@ -14,9 +14,15 @@
     <tbody>
         {% for item in items %}
         <tr>
-            <td>{{ item.title }}</td>
-            <td>{{ item.plan|floatformat:2 }}</td>
-            <td class="{% if item.title == _('Incomes') or item.title == _('Balance') %}{{ item.fact|compare:item.plan }}{% else %}{{ item.plan|compare:item.fact }}{% endif %}">{{ item.fact|floatformat:2 }}</td>
+            {% cell item.title %}
+            {% cell item.plan|floatformat:2 %}
+
+            {% if item.title == _('Incomes') or item.title == _('Balance') %}
+                {% cell item.fact css_class=item.fact|compare:item.plan %}
+            {% else %}
+                {% cell item.fact css_class=item.plan|compare:item.fact %}
+            {% endif %}
+
             {% cell item.delta highlight_value=True %}
         </tr>
         {% endfor %}
