--- a/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
@@ -54,7 +54,7 @@
             <th class="toggleDisplay">{{ avg_row.borrow_return }}</th>
             <th class="toggleDisplay">{{ avg_row.lent }}</th>
             <th class="br toggleDisplay">{{ avg_row.lent_return }}</th>
-            <th><b>Metų gale</b></th>
+            <th><b>{% translate "End of year" %}</b></th>
         </tr>
         <tr class="total">
             <th class="text-start">{% translate 'Total' %}</th>
