--- a/project/users/templates/users/invite.html
+++ b/project/users/templates/users/invite.html
@@ -9,7 +9,7 @@
     <div class="modal-body">
         {% if form %}
         {% include 'core/includes/form.html' %}
-        <button type="submit" id="submit" class="btn btn-primary btn-sm">{% translate 'Sent invitation' %}</button>
+        <button type="submit" id="submit" class="btn btn-primary btn-sm">{% translate 'Send invitation' %}</button>
         {% else %}
         <p>{% translate 'Email sent' %}</p>
         {% endif %}
