--- a/project/users/templates/users/settings_index.html
+++ b/project/users/templates/users/settings_index.html
@@ -33,7 +33,7 @@
     <div class="col">
         <div class="row settings_row">
             <div class="col"><h6 class="pb-2">{% translate 'Users'%}</h6></div>
-            <div class="col text-end pe-0 me-2"><a role="button" class="btn btn-sm btn-primary js-invite" data-url="{% url 'users:invite' %}">{% translate 'Sent invite link' %}</a></div>
+            <div class="col text-end pe-0 me-2"><a role="button" class="btn btn-sm btn-primary js-invite" data-url="{% url 'users:invite' %}">{% translate 'Send invite link' %}</a></div>
         </div>
         <div id="user_list" class="mt-3">{{ users }}</div>
     </div>
