--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -84,7 +84,7 @@
     <div class="col-lg-4">
         <div class="d-flex flex-column align-items-start h-100">
             <div class="w-100 mb-auto">
-                <div style="display: none;" id="chart_expenses">{{ chart_expenses|safe }}</div>
+                <div id="chart_expenses" style="display: none;">{{ chart_expenses|safe }}</div>
                 <div id="chart_targets">{{ chart_targets|safe }}</div>
             </div>
             <div class="w-100" id="info">{{ info|safe }}</div>
