translate month name in detailed view

--- a/project/bookkeeping/templates/bookkeeping/includes/detailed_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/detailed_table.html
@@ -7,7 +7,7 @@
         <tr class="top">
             <th>{{ name }}</th>
             {% for name in month_names %}
-            <th class="text-end w7p">{{ name }}</th>
+            <th class="text-end w7p">{% translate name %}</th>
             {% endfor %}
             <th class="text-end w7p">{% translate 'Total' %}</th>
         </tr>
