--- a/project/drinks/templates/drinks/includes/drinks_target_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_list.html
@@ -5,7 +5,7 @@
         <tr class="top-text"><th colspan="3">{% translate 'Max per day' %}</th></tr>
         <tr class="top">
             <th class="text-end">{% translate 'ml' %}</th>
-            <th class="text-end">{% translate 'vnt' %}</th>
+            <th class="text-end">{% translate 'pcs' %}</th>
             <th class="text-end"></th>
         </tr>
     </thead>
