--- a/project/drinks/templates/drinks/includes/tbl_consumption.html
+++ b/project/drinks/templates/drinks/includes/tbl_consumption.html
@@ -7,7 +7,7 @@
             <th colspan="2">{% translate 'Beer (drunk)' %}</th>
         </tr>
         <tr class="top">
-            <th>vnt</th>
+            <th>{% translate 'pcs' %}</th>
             <th class="text-end">ml</th>
         </tr>
     </thead>
