invite javascript load only in settings page

--- a/project/users/templates/users/settings_index.html
+++ b/project/users/templates/users/settings_index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% load i18n %}
+{% load static %}{% load i18n %}
 
 {% block head %}
+<script src="{% static 'js/ajax_invite.js' %}"></script>
 <style>
     .settings_row {
         background-color: aliceblue;
