dropdown for summary

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -149,7 +149,17 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link {% if '/summary/' in request.path %}active{% endif %}" href="{% url 'bookkeeping:summary' %}">{% translate 'Summary' %}</a>
+            <div class="btn-group">
+              <a class="btn btn-menu nav-link {% if '/summary/' in request.path %}active{% endif %}" href="{% url 'bookkeeping:summary' %}">{% translate 'Summary' %}</a>
+              <button type="button" class="btn btn-menu dropdown-toggle dropdown-toggle-split nav-link {% if '/summary/' in request.path %}active{% endif %}" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item btn-sm" href="{% url 'bookkeeping:summary' %}">{% translate 'Incomes' %} / {% translate 'Expenses' %}</a>
+                </li>
+              </ul>
+            </div>
           </li>
 
           <li class="nav-item">
