--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -156,7 +156,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item btn-sm" href="{% url 'bookkeeping:summary' %}">{% translate 'Incomes' %} / {% translate 'Expenses' %}</a>
+                  <a class="dropdown-item btn-sm" href="{% url 'bookkeeping:summary' %}">{% translate 'Incomes' %} & {% translate 'Expenses' %}</a>
                 </li>
               </ul>
             </div>
