Savings summary url

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -158,6 +158,9 @@
                 <li>
                   <a class="dropdown-item btn-sm" href="{% url 'bookkeeping:summary' %}">{% translate 'Incomes' %} & {% translate 'Expenses' %}</a>
                 </li>
+                <li>
+                  <a class="dropdown-item btn-sm" href="{% url 'bookkeeping:summary_savings' %}">{% translate 'Savings' %}</a>
+                </li>
               </ul>
             </div>
           </li>
