chart title font size

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
@@ -18,7 +18,11 @@
             spacingRight: 25,
         },
         title: {
-            text: '{{ title }}'
+            text: '{{ title }}',
+            style: {
+                fontSize: '16px',
+                fontFamily: 'Calibri, Verdana',
+            },
         },
         xAxis: {
             categories: categoryLabels,
