--- a/project/bookkeeping/templates/bookkeeping/summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_savings.html
@@ -9,16 +9,16 @@
 {% if records > 1 %}
 <div class="row my-2">
     <div class="col-md-12 col-lg-6">
-        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=funds name='funds' title=_('Funds') %}
+        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=funds title=_('Funds') %}
     </div>
     <div class="col-md-12 col-lg-6">
-        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=shares name='shares' title=_('Shares') %}
+        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=shares title=_('Shares') %}
     </div>
 </div>
 
 <div class="row my-2">
     <div class="col-md-12 col-lg-6">
-        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=pensions name='pensions' title=_('Pensions')|add:' III' %}
+        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=pensions title=_('Pensions')|add:' III' %}
     </div>
 </div>
 
